--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -627,21 +627,22 @@ body {
     transform: translateX(-37%);
     margin-left: 0;
   }
-  @include rwd(420) {
-    transform: translateX(-41%);
-  }
   .login_txt {
-    padding: 80px 0 0 30px;
+    padding: 20px 0 0 30px;
     .account,
     .password,
     .forget {
       display: flex;
+      white-space: nowrap;
+      @include rwd(768) {
+        display: block;
+      }
       p {
         margin-bottom: 5px;
         padding-right: 70px;
       }
       input {
-        width: 100%;
+        width: 220px;
         margin-right: 10px;
         padding: 5px 5px;
         border: 1px solid #dedede;
@@ -652,24 +653,36 @@ body {
     }
     .account,
     .password {
-      display: block;
       margin-top: 20px;
       input {
         padding: 10px 0;
         border-radius: 10px;
-        @include rwd(499) {
+
+        @include rwd(768) {
+          width: 70%;
+        }
+        @include rwd(699) {
+          width: 50%;
+        }
+        @include rwd(599) {
           width: 40%;
         }
-        @include rwd(400) {
+        @include rwd(499) {
           width: 30%;
         }
       }
     }
     .forget {
+      width: 30%;
       margin: 20px 0 0 100px;
       padding: 5px 5px;
       font-size: 12px;
       color: #97999b;
+      justify-content: space-around;
+      @include rwd(768) {
+        display: flex;
+        justify-content: inherit;
+      }
       @include rwd(499) {
         margin-left: 0;
       }
@@ -682,6 +695,9 @@ body {
         padding: 10px 40px;
         background-color: #97999b;
         color: #fff;
+        @include rwd(768) {
+          margin-left: 100px;
+        }
         @include rwd(499) {
           margin-left: 60px;
         }
@@ -704,9 +720,13 @@ body {
       @include rwd(499) {
         display: block;
       }
+      p {
+        white-space: nowrap;
+      }
       .join_log_in {
         width: 120px;
-        padding: 10px 40px;
+        padding: 10px 0;
+        text-align: center;
         margin-left: 90px;
         color: #97999b;
         border: 1px solid #97999b;
@@ -730,9 +750,13 @@ body {
     @include rwd(499) {
       display: block;
     }
+    p {
+      white-space: nowrap;
+    }
     .visitor_log_in {
       width: 120px;
-      padding: 10px 40px;
+      padding: 10px 0;
+      text-align: center;
       margin-left: 110px;
       letter-spacing: 2px;
       color: #97999b;
