--- a/style/stay.css
+++ b/style/stay.css
@@ -310,11 +310,6 @@ img {
   width: 100%;
   height: 500px;
 }
-@media screen and (max-width: 1500px) {
-  .clous_content .clous_carousel .clous_carousel_b .slick-track .slick-slide .clous_carousel_b_img img {
-    height: auto;
-  }
-}
 .clous_content .clous_carousel .clous_carousel_m {
   width: 100%;
 }
@@ -341,15 +336,12 @@ img {
 }
 @media screen and (max-width: 768px) {
   .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide .clous_carousel_m_img img {
-    width: 209px;
+    width: 100%;
     height: 209px;
   }
 }
 .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide.slick-current .clous_carousel_m_img {
   margin-left: 0;
-}
-.clous_content .clous_carousel .clous_carousel_m .slick-track .slick-current {
-  padding-right: 5px;
 }
 .clous_content .clous_item {
   width: 40%;
