--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -23,11 +23,21 @@ body {
     width: 100%;
     padding-top: 10px;
   }
+  @include rwd(768){
+    height: auto;
+    margin: 0;
+    padding: 0 0 10px 30px;
+    text-align: start;
+  }
   a {
     img {
       margin-top: 10px;
       width: 130px;
       height: 160px;
+      @include rwd(768){
+        width: 30px;
+        height: 40px;
+      }
     }
   }
   .txt {
@@ -96,6 +106,7 @@ body {
       width: 76px;
       height: 28px;
       display: block;
+      text-align: center;
       background: url(../img/online/menu.jpg) center center;
       border: 1px solid #000000;
       position: absolute;
