--- a/style/rooms_item.css
+++ b/style/rooms_item.css
@@ -190,10 +190,24 @@ body {
     padding-top: 10px;
   }
 }
+@media screen and (max-width: 768px) {
+  .logo {
+    height: auto;
+    margin: 0;
+    padding: 0 0 10px 10px;
+    text-align: start;
+  }
+}
 .logo a img {
   margin-top: 10px;
   width: 130px;
   height: 160px;
+}
+@media screen and (max-width: 768px) {
+  .logo a img {
+    width: 30px;
+    height: 40px;
+  }
 }
 .logo .txt {
   padding-top: 5px;
@@ -278,6 +292,7 @@ body {
     margin: 30px 5px 5px 0;
     font-size: 13px;
     line-height: 28px;
+    text-align: center;
   }
 }
 
@@ -1370,71 +1385,6 @@ body {
 }
 .go_top.on {
   display: block;
-}
-
-.safe_ad {
-  width: 30%;
-  height: 60%;
-  padding: 5px;
-  margin-left: -35%;
-  margin-top: 0%;
-  position: fixed;
-  top: 20%;
-  left: 70%;
-  z-index: 10002;
-  background-color: #fff;
-  text-align: center;
-  z-index: 2;
-  display: block;
-}
-.safe_ad.on {
-  display: block;
-}
-.safe_ad .safe_title {
-  padding-top: 20px;
-}
-.safe_ad .safe_title p {
-  font-weight: bolder;
-  font-size: 28px;
-}
-.safe_ad .remind {
-  padding: 0px 10%;
-  margin: 20px 0px;
-  overflow-y: auto;
-  display: flex;
-  color: red;
-}
-.safe_ad .remind p {
-  font-size: 21px;
-  font-weight: bolder;
-  text-align: left;
-}
-.safe_ad .safe_main {
-  padding: 0px 10%;
-  margin: 20px 0px;
-  text-align: left;
-}
-.safe_ad .safe_main p {
-  font-size: 14px;
-}
-.safe_ad .safe_main a {
-  color: blue;
-}
-.safe_ad .safe_ad_main {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-.safe_ad .safe_close {
-  width: 30px;
-  height: 30px;
-  border-radius: 50px;
-  background-color: #fff;
-  position: absolute;
-  top: -18px;
-  right: -18px;
-  z-index: 2;
-  cursor: pointer;
 }
 
 .safe_ad {
