--- a/style/rooms_item.scss
+++ b/style/rooms_item.scss
@@ -23,11 +23,21 @@ body {
     width: 100%;
     padding-top: 10px;
   }
+  @include rwd(768){
+    height: auto;
+    margin: 0;
+    padding: 0 0 10px 10px;
+    text-align: start;
+  }
   a {
     img {
       margin-top: 10px;
       width: 130px;
       height: 160px;
+      @include rwd(768){
+        width: 30px;
+        height: 40px;
+      }
     }
   }
   .txt {
@@ -104,6 +114,7 @@ body {
       margin: 30px 5px 5px 0;
       font-size: 13px;
       line-height: 28px;
+      text-align: center;
     }
   }
 }
@@ -1165,72 +1176,6 @@ body {
   position: fixed;
   top: 20%;
   left: 70%;
-  z-index: 10002;
-  background-color: #fff;
-  text-align: center;
-  z-index: 2;
-  display: block;
-  &.on {
-    display: block;
-  }
-  .safe_title {
-    padding-top: 20px;
-    p {
-      font-weight: bolder;
-      font-size: 28px;
-    }
-  }
-  .remind {
-    padding: 0px 10%;
-    margin: 20px 0px;
-    overflow-y: auto;
-    display: flex;
-    color: red;
-    p {
-      font-size: 21px;
-      font-weight: bolder;
-      text-align: left;
-    }
-  }
-  .safe_main {
-    padding: 0px 10%;
-    margin: 20px 0px;
-    text-align: left;
-    p {
-      font-size: 14px;
-    }
-    a {
-      color: blue;
-    }
-  }
-  .safe_ad_main {
-    width: 100%;
-    height: 100%;
-    position: relative;
-  }
-  .safe_close {
-    width: 30px;
-    height: 30px;
-    border-radius: 50px;
-    background-color: #fff;
-    position: absolute;
-    top: -18px;
-    right: -18px;
-    z-index: 2;
-    cursor: pointer;
-  }
-}
-
-// safe_ad
-.safe_ad {
-  width: 30%;
-  height: 60%;
-  padding: 5px;
-  margin-left: -35%;
-  margin-top: 0%;
-  position: fixed;
-  top: 20%;
-  left: 70%;
   background-color: #fff;
   text-align: center;
   z-index: 2;
@@ -1303,7 +1248,6 @@ body {
   background-color: #000;
   opacity: 0.5;
   z-index: 2;
-  // display: none;
   &.on {
     display: block;
   }
