--- a/style/generally.scss
+++ b/style/generally.scss
@@ -4,9 +4,11 @@ html,
 body {
   scroll-behavior: smooth;
 }
-.all_body{
+
+.all_body {
   overflow: hidden;
 }
+
 // logo
 .logo {
   width: 1200px;
@@ -20,7 +22,7 @@ body {
     width: 100%;
     padding-top: 10px;
   }
-  @include rwd(768){
+  @include rwd(768) {
     height: auto;
     margin: 0;
     padding: 0 0 10px 10px;
@@ -31,7 +33,7 @@ body {
       margin-top: 10px;
       width: 130px;
       height: 160px;
-      @include rwd(768){
+      @include rwd(768) {
         width: 30px;
         height: 40px;
       }
@@ -131,7 +133,7 @@ body {
           transform: translateX(0);
         }
       }
-      animation: ii 0.5s;
+      animation: ii 0.5s forwards;
       li {
         width: 100%;
         padding: 10px 0;
@@ -155,6 +157,9 @@ body {
             animation: aa 0.5s forwards;
             font-weight: bolder;
             background-color: #97999b;
+            @include rwd(768){
+              animation: aaaa 0.5s forwards;
+            }
             &:hover {
               background-color: #a2d7f1;
             }
@@ -173,6 +178,17 @@ body {
 .menu_coin {
   width: 100%;
   display: flex;
+  opacity: 0;
+  
+  @keyframes bbbb {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  animation: bbbb 0.5s 0.5s forwards;
   a {
     width: 50%;
     display: flex;
@@ -182,7 +198,7 @@ body {
   .website_item,
   .checkout_item {
     height: 60px;
-    width: 49%;
+    width: 50%;
     margin: 0 5px;
     padding: 0 10px;
     display: flex;
@@ -269,7 +285,18 @@ body {
       left: 0;
       bottom: 0;
       transform: translateY(100%);
+      @include rwd(768) {
+        height: 40px;
+      }
       @keyframes aa {
+        from {
+          height: 0px;
+        }
+        to {
+          height: 70px;
+        }
+      }
+      @keyframes aaaa {
         from {
           height: 0px;
         }
@@ -278,6 +305,9 @@ body {
         }
       }
       animation: aa 0.5s;
+      @include rwd(768) {
+        animation: aaaa 0.5s;
+      }
       p {
         height: 100%;
         padding: 0 20px;
@@ -300,6 +330,9 @@ body {
       bottom: 0;
       transform: translateY(100%);
       animation: aa 0.5s;
+      @include rwd(768) {
+        height: 40px;
+      }
       p {
         height: 100%;
         padding: 0 20px;
@@ -387,7 +420,7 @@ body {
           .in_rooms_day {
             display: flex;
           }
-          span{
+          span {
             padding: 0 5px;
           }
         }
@@ -445,7 +478,7 @@ body {
       transform: translateX(-30%);
     }
     @include rwd(667) {
-      transform: translateX(-37%);
+      transform: translateX(-32%);
     }
     @include rwd(400) {
       transform: translateX(-41%);
@@ -512,7 +545,7 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    @include rwd(1200){
+    @include rwd(1200) {
       margin: 0 10px;
     }
     .txt {
