--- a/style/offer.scss
+++ b/style/offer.scss
@@ -156,6 +156,9 @@ body {
             justify-content: center;
             animation: aa 0.5s forwards;
             background-color: #97999b;
+            @include rwd(768){
+              animation: aaaa 0.5s forwards;
+            }
             &:hover {
               background-color: #a2d7f1;
             }
@@ -279,6 +282,9 @@ body {
         }
       }
       animation: aa 0.5s;
+      @include rwd(768){
+        animation: aaaa 0.5s;
+      }
       p {
         height: 100%;
         padding: 0 20px;
