--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -158,6 +158,9 @@ body {
             animation: aa 0.5s forwards;
             font-weight: bolder;
             background-color: #97999b;
+            @include rwd(768){
+              animation: aaaa 0.5s forwards;
+            }
             &:hover {
               background-color: #a2d7f1;
             }
@@ -277,10 +280,13 @@ body {
           height: 0px;
         }
         to {
-          height: 40px;
+          height: 70px;
         }
       }
       animation: aa 0.5s;
+      @include rwd(768){
+        animation: aaaa 0.5s;
+      }
       p {
         height: 100%;
         padding: 0 20px;
@@ -580,9 +586,7 @@ body {
     transform: translateX(-37%);
     margin-left: 0;
   }
-  @include rwd(420) {
-    transform: translateX(-41%);
-  }
+
   .SSL_title {
     padding: 20px 0 30px 0;
     p {
@@ -617,7 +621,7 @@ body {
       }
       p {
         width: 100%;
-        text-align: center;
+        // text-align: center;
         margin-right: 50px;
         @include rwd(570) {
           margin-right: 0;
@@ -692,6 +696,9 @@ body {
       @include rwd(768) {
         display: flex;
         justify-content: inherit;
+      }
+      @include rwd(599) {
+        margin-left: 0;
       }
       @include rwd(499) {
         margin-left: 0;
