--- a/style/rooms_item.scss
+++ b/style/rooms_item.scss
@@ -156,6 +156,9 @@ body {
             justify-content: center;
             animation: aa 0.5s forwards;
             background-color: #97999b;
+            @include rwd(768){
+              animation: aaaa 0.5s forwards;
+            }
             &:hover {
               background-color: #A2D7F1;
             }
@@ -275,10 +278,13 @@ body {
           height: 0px;
         }
         to {
-          height: 40px;
+          height: 70px;
         }
       }
       animation: aa 0.5s;
+      @include rwd(768){
+        animation: aaaa 0.5s;
+      }
       p {
         height: 100%;
         padding: 0 20px;
