--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -153,6 +153,7 @@ body {
           padding: 10px 0;
           p {
             display: flex;
+            padding: 10px 0;
             align-items: center;
             justify-content: center;
             animation: aa 0.5s forwards;
