--- a/style/notice.css
+++ b/style/notice.css
@@ -333,6 +333,7 @@ body {
     padding: 10px 0;
   }
   .menu_item ul li .item_llst p {
+    padding: 10px 0;
     display: flex;
     align-items: center;
     justify-content: center;
