--- a/style/online.css
+++ b/style/online.css
@@ -332,6 +332,7 @@ body {
     padding: 10px 0;
   }
   .menu_item ul li .item_llst p {
+    padding: 10px 0;
     display: flex;
     align-items: center;
     justify-content: center;
