--- a/style/online.scss
+++ b/style/online.scss
@@ -151,6 +151,7 @@ body {
           display: none;
           padding: 10px 0;
           p {
+            padding: 10px 0;
             display: flex;
             align-items: center;
             justify-content: center;
