--- a/style/reservation.css
+++ b/style/reservation.css
@@ -334,6 +334,7 @@ body {
   }
   .menu_item ul li .item_llst p {
     display: flex;
+    padding: 10px 0;
     align-items: center;
     justify-content: center;
     animation: aa 0.5s forwards;
